--- a/index.html
+++ b/index.html
@@ -4,8 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ryan</title>
+    <style>
+        body{
+        background-color: black
+        }
+        h1{
+        font-family: "Comic sans", font-color="black"
+        }
+    </style>
 </head>
 <body>
-    <h2>This is my page</h2>
+    <marquee><h1>Ryan's page is out of order. Be patience</h1></marquee>t
 </body>
 </html>
