--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         background-color: black
         }
         h1{
-        font-family: "Comic sans", font-color="black"
+        font-family: "Comic sans", font-color="white"
         }
     </style>
 </head>
