--- a/index.html
+++ b/index.html
@@ -3,17 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ryan</title>
+    <title>Ryan</title>
     <style>
-        body{
-        background-color: black
+        body {
+            background-color: black;
         }
-        h1{
-        font-family: "Comic sans"; font-color:"white"
+        h1 {
+            font-family: "Comic Sans MS", cursive, sans-serif;
+            color: white;
         }
     </style>
 </head>
 <body>
-    <marquee><h1>Ryan's page is out of order. Be patience</h1></marquee>t
+    <marquee><h1>A página do Ryan está fora do ar. Seja paciente.</h1></marquee>
 </body>
 </html>
