--- a/index.html
+++ b/index.html
@@ -8,13 +8,25 @@
         body {
             background-color: black;
         }
-        h1 {
+        h1, table, legend, a {
             font-family: "Comic Sans MS", cursive, sans-serif;
             color: white;
         }
     </style>
 </head>
 <body>
-    <marquee><h1>A página do Ryan está fora do ar. Seja paciente.</h1></marquee>
+    <fieldset>
+        <legend><img src="karl_marx2.png" width="100"></legend>
+        <table border="1" width="100%">
+            <tr>
+                <td>
+                    <a href="https://www.youtube.com/watch?v=nbgOwns0DLc">Resumo de Karl Marx</a>
+                </td>
+                <td>
+                    <a href="https://www.bbc.com/portuguese/geral-41889653">Matéria da BBC<a/>
+                </td>
+            </tr>
+        </table>
+    </fieldset><br>
 </body>
 </html>
