--- a/index.html
+++ b/index.html
@@ -1,25 +1,38 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
+<title>Bem-Vindo!</title>
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>home</title>
+    <title>Jogo de Adivinhação de Filmes e Séries</title>
+    <link rel="stylesheet" href="assets/style.css">
+    <script src="js/script.js" defer></script>
 </head>
+
 <body>
-    <div id = "table"> 
-    <fieldset style="width: 25%;"> 
-    <legend align = "center">&leftarrow; Olá! Sou Ryan e esse eh o MENU - home &rightarrow;</legend>
-        <table align = "center" border="1px" width="30%">
-        <tr>
-            <td><a href="index.html" style="color: black;">home</a></td>
-            <td><a href="curriculo.html" style="color: black">curriculum</a></td>
-            <td><a href="projetos.html" style="color: black">projects</a></td>
-        </tr>
-    </table>
-</fieldset>
-<br>
-</div>
-<h1>Onde estamos?</h1>
-<p>Essa página está sendo construída aos poucos.<strong>Você está no meu index.html</strong><br>Em breve, adicionarei mais informações e aplicarei mais técnicas para deixar meu website o mais "clean" possível. <br>Enquanto isso, explore meus gostos pessoais na página de <a href="curriculo.html">curriculo.</a></p>
+    <header><h1>Rianwithy - Quiz Filmes/Séries</h1></header>
+    <div id="pontuacao"></div> <!-- aqui esta a div que recebe a pontuacao a partir do javascript -->
+
+    <div id="question"></div> <!-- div para inserir o texto da pergunta 'Qual é o filme ou série?' -->
+
+    <div class="dofilme">
+        <!-- Imagem do filme ou série -->
+        <img id="mediaImage" alt="Imagem do filme/série" style="display: none;">
+        <!-- Aqui insiro a sinopse do filme ou serie para o caso de acertarem a opcao correta -->
+        <div class="texto"> <!-- div para ordenar a disposicao da sinopse e do resultado na tela -->
+            <div id="sinopse">
+                <!-- Resultado da resposta -->
+            </div>
+            <div class="textresultado"> <!-- div para agrupar o resultado e o nextbtn, afim de manter esses proximos dentro do codigo -->
+                <div id="result"></div>
+                <!-- Botão para próxima rodada -->
+                <button id="nextButton" style="display:none;">Próximo</button>
+            </div>
+        </div>
+    </div>
+
+    <!-- Opções de resposta -->
+    <div id="options"></div>
 </body>
 </html>
